Fix a syntax issue in content-talk.php; fix a couple layout issues

--- a/src/sass/partials/archives.scss
+++ b/src/sass/partials/archives.scss
@@ -18,6 +18,7 @@ body.post-type-archive-talk {
             font-size: 1rem;
             color: $tedred;
             font-weight: 600;
+			margin-bottom: 1rem;
         }
         
         .talk-event {
